--- a/index.html
+++ b/index.html
@@ -385,5 +385,17 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    $(window).scroll(function() {
+    if ($(this).scrollTop() > 1){
+        $('.header').addClass("fix");
+    }
+    else{
+        $('.header').removeClass("fix");
+    }
+    });
+</script>
+
 </body>
 </html>
