Lesson 17 done (sedebar forms + buttons + banner)

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
+        </section>
 
-            <section>
+        <section>
                     <div class="block-post">
                         <div class="block-post-left">
                             <div class="block-post-left__thumb">
@@ -243,7 +243,87 @@
                             </div>
                         </div>
                     </div>
-                </section>
+        </section>
+        <section>
+                <div class="block-post">
+                    <div class="block-post-left">
+                        <div class="block-post-left__thumb">
+                            <img src="img/img-3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="block-post-right">
+                        <div class="block-post-right-info">  
+                            <a class="block-post-right__tag" href="">art</a>
+                            <h2 class="block-post-right__title"><a href="">The Principles Of Scientific 
+                                    Cooking</a></h2>
+                            <div class="block-post-right__date">
+                                <p>June 14, 2015</p>
+                                <a href="">by Author Doe</a>
+                            </div>
+                        </div>
+                        <div class="block-post-right__description">
+                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
+                            <a href=""><svg id="circle-line">
+                                <rect width="100%" height="20" fill="url('#fill')"></rect>
+                                <pattern x="0" y="-10" width="10" height="20" id="fill" patternUnits="userSpaceOnUse">
+                                  <circle cx="3" cy="3" r="2.7" fill="black"></circle>
+                                </pattern>
+                                  </svg>
+                            </a>
+                            <a href=""></a>
+                        </div>
+                        <div class="block-post-right__flex">
+                                <a class="post-top-col__comment" href="">24</a>
+                                <ul class="social social social-post">
+                                    <li>Share</li>   
+                                    <li><a class="social__link social__twitter" target="_blank" href=""></a></li>
+                                    <li><a class="social__link social__linkedin" target="_blank" href=""></a></li>                            
+                                    <li><a class="social__link social__facebook" target="_blank" href=""></a></li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+    </section>
+    <section>
+            <div class="block-post">
+                <div class="block-post-left">
+                    <div class="block-post-left__thumb">
+                        <img src="img/img-3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="block-post-right">
+                    <div class="block-post-right-info">  
+                        <a class="block-post-right__tag" href="">art</a>
+                        <h2 class="block-post-right__title"><a href="">The Principles Of Scientific 
+                                Cooking</a></h2>
+                        <div class="block-post-right__date">
+                            <p>June 14, 2015</p>
+                            <a href="">by Author Doe</a>
+                        </div>
+                    </div>
+                    <div class="block-post-right__description">
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
+                        <a href=""><svg id="circle-line">
+                            <rect width="100%" height="20" fill="url('#fill')"></rect>
+                            <pattern x="0" y="-10" width="10" height="20" id="fill" patternUnits="userSpaceOnUse">
+                              <circle cx="3" cy="3" r="2.7" fill="black"></circle>
+                            </pattern>
+                              </svg>
+                        </a>
+                        <a href=""></a>
+                    </div>
+                    <div class="block-post-right__flex">
+                            <a class="post-top-col__comment" href="">24</a>
+                            <ul class="social social social-post">
+                                <li>Share</li>   
+                                <li><a class="social__link social__twitter" target="_blank" href=""></a></li>
+                                <li><a class="social__link social__linkedin" target="_blank" href=""></a></li>                            
+                                <li><a class="social__link social__facebook" target="_blank" href=""></a></li>
+                            </ul>
+                    </div>
+                </div>
+            </div>
+</section>
 
     </div>
 
@@ -269,9 +349,9 @@
         <div class="sidebar-block-newslatter">
             <h3 class="sidebar-block-h3">Newslatter</h3>
             <div class="line"></div>
-            <div><input type="text" value="Your email address"></div>
+            <div><input class="sidebar-block__input" type="text" value="Your email address"></div>
             <div>
-                <div>SUBSCribe</div>
+                <button type="submit" class="sidebar-block__submit">SUBSCRIBE</button>
             </div>
         </div>
         <div class="sidebar-block sidebar-block-categories"> 
@@ -285,60 +365,30 @@
                 <li><a href="">Sport</a><span>62</span></li>
                 <li><a href="">Yoga</a><span>8</span></li>
             </ul>
+            <div class="sidebar-block-search">
+                <input class="sidebar-block__input sidebar-block-search__input" type="text" value="Search...">
+                <input class="sidebar-block__submit sidebar-block-search__submit" type="submit" value="">
+            </div>            
         </div>
-        <div class="sidebar-block-banner">
+                <div class="sidebar-block-banner">
                 <h3 class="sidebar-block-h3">Banner</h3>
                 <div class="line"></div> 
-                <img src="" alt="">             
+                <img class="sidebar-block-banner__img" src="img/banner.png" alt="">             
         </div>
         <div class="sidebar-block sidebar-block-tags"> 
-                <h3 class="sidebar-block-h3">Tags</h3>
-                <div class="line"></div>
-                <ul class="sidebar-block-tags-list">
-                    <li><a href="">Fashion</a></li>
-                    <li><a href="">Music</a></li>
-                    <li><a href="">Lorem tag</a></li>
-                    <li><a href="">tag</a></li>
-                    <li><a href="">ipsum tag</a></li>
-                    <li><a href="">travel</a></li>
-                    <li><a href="">Fashion</a></li>
-                    <li><a href="">Music</a></li>
-                </ul>
-            </div>
-        <div>
-            <h2></h2>
-            <input type="text">
-            <button></button>
-        </div>    
-        <div>
-            <h2></h2>
-            <ul>
-                <li><a href=""><span></span></a></li>
-                <li><a href=""><span></span></a></li>
-                <li><a href=""><span></span></a></li>
-                <li><a href=""><span></span></a></li>
-                <li><a href=""><span></span></a></li>
-                <li><a href=""><span></span></a></li>
-            </ul>
+            <h3 class="sidebar-block-h3">Tags</h3>
+            <div class="line"></div>
+            <ul class="sidebar-block-tags-list">
+                <li><a href="">Fashion</a></li>
+                <li><a href="">Music</a></li>
+                <li><a href="">Lorem tag</a></li>
+                <li><a href="">tag</a></li>
+                <li><a href="">ipsum tag</a></li>
+                <li><a href="">travel</a></li>
+                <li><a href="">Fashion</a></li>
+                <li><a href="">Music</a></li>
+            </ul>            
         </div>  
-        <div>
-            <input type="text">
-            <button></button>
-        </div> 
-        <div>
-            <h2></h2>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h2></h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
     </div>
 </div>
 
